--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Erebot\\URI\\": "src/"
+            "Erebot\\": "src/"
         }
     },
     "extra": {
