--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,6 @@ php:
     - 5.6
     - hhvm
  
-matrix:
-    allow_failures:
-        - php: hhvm
-
 notifications:
     email: false
     irc: "irc.iiens.net#Erebot"
@@ -23,6 +19,6 @@ before_script:
 script: phpunit --coverage-clover clover.xml tests/
 
 after_script:
-    - composer require --dev $prefer_source "satooshi/php-coveralls dev-master"
+    - composer require --dev "satooshi/php-coveralls dev-master"
     - php vendor/bin/coveralls -n -v
 
